--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <p id="password"></p>
     <script src="./assets/js/main.js"></script>
 </body>
 </html>
